# vortex

./: .dockerignore  .env.example  .gitignore  .prettierignore  Cargo.toml  DEPLOYMENT.md  FEATURE_COMPARISON.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  LICENSE  PHASE1_SUMMARY.md  PROGRESS.md  QUICKSTART.md  README.md  analysis_options.yaml  dart_options.yaml  eslint.config.js  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  pubspec.yaml  run_dev.sh  tailwind.config.ts  tsconfig.node.json  vite.config.ts  wrangler.toml  zeabur.json
android/app/: build.gradle.kts
binaries/: README.md
binaries/darwin-x86_64/: aria2.conf
docs/: 01-legado-analysis.md  02-vortex-design-specification.md  03-project-summary.md  04-phase2-database-layer-summary.md
examples/: advanced.rs  ai_extraction.rs  basic.rs  builder.rs  comprehensive.rs  json_api.rs  llm_parse.rs  multi_llm.rs  parallel.rs  rate_limit.rs  task_driven.rs
gui/: .gitignore  index.html  package-lock.json  package.json
gui/src/: App.css  App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: douban.dart  genre.dart  video.dart
lib/services/: api_source_service.dart  app_settings_service.dart  config_subscription_service.dart  douban_service.dart  favorites_service.dart  site_config_service.dart  video_service.dart  video_source_manager.dart
lib/widgets/: douban_image.dart  section_header.dart  video_card.dart
macos/Runner.xcodeproj/: project.pbxproj
public/: manifest.json  sw.js
src/: App.tsx  App.vue  error.rs  executor.rs  index.css  lib.rs  llm_client.rs  main.rs  main.ts  main.tsx  middleware.ts  store.rs  styles.css  task.rs  types.rs  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  config_manager.rs  engine.rs  lib.rs  main.rs
src-tauri/src/commands/: connection.rs  redis.rs
src-tauri/src/db/: schema.rs  state.rs
src-tauri/src/redis_client/: mod.rs
src/api/: album.ts  aria2.ts  config.ts  index.ts  playlist.ts  rank.ts  recommend.ts  search.ts  singer.ts  song.ts  user.ts
src/app/: globals.css  layout.tsx  not-found.tsx
src/components/: LanguageSwitcher.tsx  NavBar.tsx  SettingsDialog.tsx  StatusBar.tsx  TitleBar.tsx  config-demo.tsx  config-provider.tsx  theme-provider.tsx  theme-toggle.tsx
src/constants/: index.ts
src/graph/: mod.rs
src/hooks/: color.ts  index.ts  sign.ts  theme.ts  useTaskPolling.ts  wheel.ts
src/layout/: Layout.vue  Lyrics.vue  Main.vue  Player.vue  Sidebar.vue  Titlebar.vue
src/lib/: auth.ts  bangumi.client.ts  config-types.ts  config.ts  crypto.ts  db.client.ts  douban.client.ts  douban.ts  json-utils.ts  (+2 more)
test/: database_test.dart  widget_test.dart
tests/: integration_test.rs
(+204 files in other folders)
