[package]
name = "vortex-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
vortex-core = { path = "../../crates/vortex-core" }
vortex-http = { path = "../../crates/vortex-http" }
vortex-db = { path = "../../crates/vortex-db" }
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
